Fix heatmap x axis title overlaps barchart at narrow layout if a heatmap column is selected

--- a/frontend/packages/portal-frontend/src/geneTea/styles/GeneTeaTabLayout.scss
+++ b/frontend/packages/portal-frontend/src/geneTea/styles/GeneTeaTabLayout.scss
@@ -72,6 +72,7 @@
         "plot";
       grid-template-columns: 1fr;
       grid-template-rows: auto auto;
+      max-width: 65%;
     }
   }
 
